--- a/spring-server/build.gradle
+++ b/spring-server/build.gradle
@@ -6,6 +6,7 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
+		compile 'com.google.firebase:firebase-server-sdk:[3.0.1,)'
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 	}
 }
