--- a/TwoChange/app/build.gradle
+++ b/TwoChange/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -33,7 +34,10 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     compile 'com.google.firebase:firebase-database:9.6.1'
+    //Firebase authentication
     compile 'com.google.firebase:firebase-auth:9.6.1'
+    //Google sign In
+    compile 'com.google.android.gms:play-services-auth:9.6.1'
 
     testCompile 'junit:junit:4.12'
 }
