--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ fabric.properties
 #.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
 .gradle
 build/
+TwoChange/app/google-services.json
