--- a/TwoChange/app/src/main/AndroidManifest.xml
+++ b/TwoChange/app/src/main/AndroidManifest.xml
@@ -20,7 +20,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".presentation.activity.zWorking" />
-        <activity android:name=".presentation.activity.RegisterActivity"></activity>
+        <activity android:name=".presentation.activity.RegisterActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
