--- a/TwoChange/app/build.gradle
+++ b/TwoChange/app/build.gradle
@@ -35,12 +35,12 @@ dependencies {
     //Google sign In
     
 
-    compile
-    'com.android.support:appcompat-v7:25.2.0'compile
-    'com.android.support.constraint:constraint-layout:1.0.2'compile
-    'com.google.firebase:firebase-database:9.6.1'compile
-    'com.google.firebase:firebase-auth:9.6.1'compile
-    'com.google.android.gms:play-services-auth:9.6.1'compile 'com.android.support:design:25.2.0'
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.google.firebase:firebase-database:9.6.1'
+    compile 'com.google.firebase:firebase-auth:9.6.1'
+    compile  'com.google.android.gms:play-services-auth:9.6.1'
+    compile 'com.android.support:design:25.2.0'
     testCompile 'junit:junit:4.12'
 }
 
