--- a/TwoChange/app/src/main/AndroidManifest.xml
+++ b/TwoChange/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".presentation.activity.zWorking" />
-        <activity android:name=".presentation.activity.RegisterActivity"></activity>
+        <activity android:name=".presentation.activity.RegisterActivity" />
+
     </application>
 
 </manifest>
