--- a/TwoChange/app/build.gradle
+++ b/TwoChange/app/build.gradle
@@ -46,7 +46,8 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:9.6.1'
     compile 'com.firebaseui:firebase-ui:0.6.1'
     compile 'com.google.android.gms:play-services-auth:9.6.1'
-    compile 'com.android.support:design:25.2.0'
+    compile 'com.google.firebase:firebase-messaging:9.6.1'
+    compile 'com.android.support:design:25.3.0'
 
     testCompile 'junit:junit:4.12'
 }
