--- a/TwoChange/app/build.gradle
+++ b/TwoChange/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:9.6.1'
     compile 'com.google.firebase:firebase-messaging:9.6.1'
     compile 'com.android.support:design:25.3.0'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
 
     testCompile 'junit:junit:4.12'
 }
