--- a/TwoChange/app/src/main/AndroidManifest.xml
+++ b/TwoChange/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".presentation.activity.LoginActivtiy">
+        <activity android:name=".presentation.activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,7 +26,7 @@
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".presentation.activity.ProfileActivity" />
-        <activity android:name=".presentation.activity.MenuProvisionalActivity" />
+        <activity android:name=".presentation.activity.MainMenuActivity" />
         <activity android:name=".presentation.activity.NewProfileActivity" />
     </application>
 
