--- a/TwoChange/app/src/main/AndroidManifest.xml
+++ b/TwoChange/app/src/main/AndroidManifest.xml
@@ -25,7 +25,11 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".presentation.activity.MenuProvisionalActivity"></activity>
+        <activity android:name=".presentation.activity.MenuProvisionalActivity" />
+        <activity
+            android:name=".presentation.activity.PostAdActivity"
+            android:label="@string/title_activity_post_ad"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
