--- a/TwoChange/app/src/main/AndroidManifest.xml
+++ b/TwoChange/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".presentation.activity.ProfileActivity" />
         <activity android:name=".presentation.activity.MainMenuActivity" />
         <activity android:name=".presentation.activity.NewProfileActivity" />
+        <activity android:name=".presentation.activity.SearchProfileActivity"></activity>
     </application>
 
 </manifest>
