--- a/TwoChange/app/src/main/AndroidManifest.xml
+++ b/TwoChange/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".presentation.activity.ProfileActivity" />
         <activity android:name=".presentation.activity.MainMenuActivity" />
-        <activity android:name=".presentation.activity.NewProfileActivity" />
+        <activity android:name=".presentation.activity.EditProfileActivity" />
         <activity android:name=".presentation.activity.SearchProfileActivity"></activity>
     </application>
 
