--- a/TwoChange/app/src/main/AndroidManifest.xml
+++ b/TwoChange/app/src/main/AndroidManifest.xml
@@ -10,12 +10,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher_icon1"
+        android:icon="@mipmap/ic_launcher_icon4"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_icon1"
+        android:roundIcon="@mipmap/ic_launcher_icon4"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".presentation.activity.LoginActivity">
+        <activity android:name=".presentation.activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,7 +38,7 @@
         <activity android:name=".presentation.activity.ProfileActivity" />
         <activity android:name=".presentation.activity.MainMenuActivity" />
         <activity android:name=".presentation.activity.SearchProfileActivity" />
-        <activity android:name=".presentation.activity.RecyclerChatActivity"></activity>
+        <activity android:name=".presentation.activity.RecyclerChatActivity" />
 
         <service android:name=".services.MyFirebaseMessagingService">
             <intent-filter>
@@ -52,7 +52,7 @@
         </service>
 
         <activity android:name=".presentation.activity.EditProfileActivity" />
-        <activity android:name=".presentation.activity.SplashActivity"></activity>
+        <activity android:name=".presentation.activity.LoginActivity" />
     </application>
 
 </manifest>
