--- a/TwoChange/app/build.gradle
+++ b/TwoChange/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile 'com.android.support:design:25.3.0'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.android.support:support-v4:25.3.0'
+    compile 'com.android.support:support-vector-drawable:25.3.0'
     testCompile 'junit:junit:4.12'
 }
 
