--- a/TwoChange/app/build.gradle
+++ b/TwoChange/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:9.6.1'
     compile 'com.google.firebase:firebase-auth:9.6.1'
     compile 'com.firebaseui:firebase-ui:0.6.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.gms:play-services-auth:9.6.1'
     compile 'com.google.firebase:firebase-messaging:9.6.1'
     compile 'com.android.support:design:25.3.0'
