--- a/TwoChange/app/build.gradle
+++ b/TwoChange/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile 'com.firebaseui:firebase-ui:0.6.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     testCompile 'junit:junit:4.12'
 }
 
