--- a/TwoChange/app/src/main/AndroidManifest.xml
+++ b/TwoChange/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         </activity>
         <activity android:name=".presentation.activity.NewUserActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".presentation.activity.ChatActivity">
+        <activity android:name=".presentation.controller.ChatActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".presentation.activity.MainMenuActivity" />
