--- a/TwoChange/app/src/main/AndroidManifest.xml
+++ b/TwoChange/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".presentation.activity.MainMenuActivity" />
         </activity>
-        <activity android:name=".presentation.activity.ProfileActivity" />
+        <activity android:name=".presentation.activity.ProfileNoActivity" />
         <activity android:name=".presentation.activity.MainMenuActivity" />
         <activity android:name=".presentation.activity.SearchActivity" />
         <activity android:name=".presentation.activity.RecyclerChatActivity" />
